# billiard-trajectories-construction

./: .gitignore  Ball.h  CMakeLists.txt  GravityProcessing.cpp  GravityProcessing.h  MyPoint.h  SimpleSerial.cpp  SimpleSerial.h  UDPServer.cpp  UDPServer.h  main.cpp
